rewritten exclusion criteria dn_aa_02 and second level GLM dn_aa_03, added function to dn_utils.plotting

--- a/activation_analysis/dn_aa_00_calculate_modulations.ipynb
+++ b/activation_analysis/dn_aa_00_calculate_modulations.ipynb
@@ -11,7 +11,7 @@
     "- calculates trial-wise estimates of different model tracking variables (e.g. prediction error)\n",
     "- saves these parametric modulations to file\n",
     "\n",
-    "(*Note*) Usually subjects are trying to minimize overal prediction error. Here it is not precisely the case, because sometimes subject pick probabilistically worse option to maximize their winnings.\n",
+    "> Usually subjects are trying to minimize overal prediction error. Here it is not precisely the case, because sometimes subject pick probabilistically worse option to maximize their winnings.\n",
     "\n",
     "---\n",
     "**Last update**: 07.02.2020 "
