added dn_ca_04, comments for ridge deconvolution

--- a/connectivity_analysis/dn_ca_01_ridge_deconvolution.ipynb
+++ b/connectivity_analysis/dn_ca_01_ridge_deconvolution.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deconvolution \n",
+    "\n",
+    "This notebook presents custom deconvolution implementation using **cosine basis set** for representing neural signal and **ridge regression** for solving linear equations. In constrast, SPM implementation of deconvolution `spm_peb_ppi.m` uses Parametric empirical Bayes method (without free parameters) for solving linear equations. Ridge regression approach is validated using synthetically generated neural and BOLD data with varying amount of noise. Analysis is focused on influence of regularization parameter $\\alpha$ on reconstructed neural activity. \n",
+    "\n",
+    "---\n",
+    "**Last update**: 30.04.2020"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -113,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Show hemodynamic response functions\n",
+    "### Hemodynamic response function\n",
     "\n",
     "Two popular shapes of hemodynamic response functions are called Glover and double-gamma HRF implemented in SPM. Hemodynamic function peaks at around 5-7 seconds after onset of neural event, and gradually decreseases to reach slight undershoot after around 15 seconds after onset of neural event. After around 25 seconds after onset of neural event, hemodynamic level goes back to inital baseline. Module `hemodynamic_models` from nistats allows to recreate downsampled canonical HRFs for different models. "
    ]
@@ -154,7 +166,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrix form of convolution"
+    "### Matrix formulation of convolution\n",
+    "\n",
+    "Hemodynamic response to neuronal activity is modeled by convolution of neural activity with a hemodynamic impulse response function:\n",
+    "$$y_t=\\sum_{\\tau}h_{\\tau}x_{t - \\tau},$$ \n",
+    "where $y_t$ is measured BOLD at time $t$, $h_t$ is assumed hemodynamic response at time $t$ and $x_t$ is true neuronal signal at time $t$. Convolution can also be expressed in matrix form:\n",
+    "$$y=Hx,$$\n",
+    "where $y$ and $x$ are BOLD and neural signal vectors and $H$ is hemodynamic response function in Toeplitz matrix form (see Figure below). "
    ]
   },
   {
@@ -212,7 +230,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create basis set"
+    "### Basis set\n",
+    "\n",
+    "Let's assume that we measured BOLD signal, which is neuronal signal convolved with HRF with some extra noise. We want to deduce underlying neuronal activity. First, we can expand unknown neuronal activity in terms of a temporal basis set $X$. We can choose either a Fourier series or a set of cosine functions. We can write our neuronal signal as linear comibnations of cosine functions and unknown $\\beta$ coefficients. Our goal will be to find these cooeficients.\n",
+    "$$x=X\\beta$$\n",
+    "Since $y=Hx$, we can take noise $\\epsilon$ into account and write a linear model:\n",
+    "$$y=HX\\beta + \\epsilon$$\n",
+    "Maximum likelihood estimate for $\\beta$ can be found using the Gauss-Markov theorem:\n",
+    "$$\\hat{\\beta}_{ML}=(X^TH^THX)^{-1}X^{T}H^{T}y$$\n",
+    "The problem with MLE approach is that estimates based on a full-rank basis set are highly variable (not effieicient). This is particularly true for the $\\beta$ coefficients controlling high frequencies, since HRF attenuates them (smooths out the response). Therefore, some form of regularization should be introduced to supress this confounding effect. \n",
+    "\n",
+    "Here, discrete cosine basis set $X$ is created for number of timepoints equal to number of acquired volumes. Number of basis function also equals number of timepoints (full rank basis set). All basis functions are then convolved with HRF since we have to estimate $\\beta$ weights for $HX$ matrix."
    ]
   },
   {
@@ -308,6 +336,17 @@
     "\n",
     "ax[-1].set_xlabel('time [seconds]')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solving linear model\n",
+    "\n",
+    "Linear model is solved using ridge regression. Ridge regression modifies $\\beta$ estimate introducing regularization parameter $\\alpha$ which effectively penalize higher coefficients preventing model overfitting to noise:\n",
+    "$$\\hat{\\beta}_{ridge}=(X^TH^THX+\\alpha\\mathbb{1})^{-1}X^{T}H^{T}y$$\n",
+    "The higher the value of $\\alpha$ the more regularization is applied. For $\\alpha=0$ ridge regression reduces to ordinary least-squares (OLS) method $\\hat{\\beta}_{ridge}=\\hat{\\beta}_{ML}$."
    ]
   },
   {
