found bug in dn_ca_03_ppi model, intercept was not included in OLS

--- a/connectivity_analysis/dn_ca_03_ppi_model.ipynb
+++ b/connectivity_analysis/dn_ca_03_ppi_model.ipynb
@@ -4,7 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PPI General Linear Model"
+    "## PPI General Linear Model\n",
+    "\n",
+    "Here, PPI network construction is performed by evaluating multiple linear models and extracting regressors beta weights. PPI linear model takes form: \n",
+    "\n",
+    "$$y=\\beta_0+\\beta_1\\cdot x_{physio}+\\beta_2\\cdot x_{perr\\_ons}+\\beta_3\\cdot x_{perr\\_full}+\n",
+    "            \\beta_4\\cdot x_{PPI:perr\\_ons}+\\beta_5\\cdot x_{PPI:perr\\_full}+\n",
+    "            \\beta_6\\cdot x_{dec\\_ons}+\\beta_7\\cdot x_{res\\_lbp}+\\beta_8\\cdot x_{res\\_rbp}+\\beta_9\\cdot x_{res\\_miss} \n",
+    "$$\n",
+    "\n",
+    "Detailed regressors description:\n",
+    "\n",
+    "| Regressor | Type | Description | Event Duration\n",
+    "|:--:|----|----|----|\n",
+    "| `y` | physiological | BOLD signal from target region | – |\n",
+    "| | | | |\n",
+    "| `intercept` | other | intercept for linear model | – |\n",
+    "| `physio` | physiological | BOLD signal from seed region | – |\n",
+    "| `perr_ons` | psychological | outcome phase onset | 1s |\n",
+    "| `perr_full` | psychological | outcome phase onset parametrically modulated with prediction error | 1s |\n",
+    "| `ppi_perr_ons` | interaction | `perr_ons` point-by-point multiplied with <br />deconvolved seed timeseries, reconvolved with HRF | 1s \n",
+    "| `ppi_perr_full` | interaction | `perr_full` point-by-point multiplied with <br />deconvolved seed timeseries, reconvolved with HRF | 1s |\n",
+    "| `dec_ons` | psychological | decision phase onset | 0s |\n",
+    "| `res_lbp` | psychological | left button press onset | 0s |\n",
+    "| `res_rbp` | psychological | right button press onset | 0s |\n",
+    "| `res_miss` | psychological | onset of isi phase for trials with missing response | 0s |\n",
+    "\n",
+    "---\n",
+    "**Last update**: 05.05.2020"
    ]
   },
   {
@@ -87,7 +114,34 @@
    "outputs": [],
    "source": [
     "def upsampled_events(onsets, n_volumes, duration, t_r, modulation=None, sampling_rate=1/16):\n",
-    "    '''...'''\n",
+    "    '''Create upsampled regressors from given events.\n",
+    "    \n",
+    "    This function is used to create upsampled psychological regressors. These can be used to create\n",
+    "    interaction regressors in PPI analysis. Since deconvolved neural signal is usually upsampled \n",
+    "    (sixteen times by default is SPM) and interaction regressors have to be created in the neural \n",
+    "    domain, psychological regressor has to be upsampled to match sample rate for the neural \n",
+    "    regressor. Then PPI regressor can be calculated as point-by-point multiplication of \n",
+    "    psychological and physiological regressors.\n",
+    "    \n",
+    "    Args:\n",
+    "        onsets (iterable):\n",
+    "            Contains all event onset (in seconds).\n",
+    "        n_volumes (int):\n",
+    "            Number of scans for entire task.\n",
+    "        duration (float):\n",
+    "            Duration of event. Here, we assume all events have same duration.\n",
+    "        t_r (float):\n",
+    "            Scanning repetition time (TR).\n",
+    "        modulation (iterable, optional):\n",
+    "            Events amplitude modulation.\n",
+    "        sampling_rate (float):\n",
+    "            Upsampling rate. For 16-fold upsampling sampling_rate is 1/16.\n",
+    "            \n",
+    "    Returns:\n",
+    "        Numpy 1D array of length n_volumes / sampling_rate. Note that this function returns \n",
+    "        demeaned psychological regressor (omitting demeaning can produce spurious PPI effects if\n",
+    "        deconvolution is imperfect).\n",
+    "    '''\n",
     "    if modulation is None:\n",
     "        modulation = np.ones((len(onsets), ))\n",
     "    \n",
@@ -106,31 +160,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Analyzing: m33 / pun / seed: 284\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "frame_times = np.arange(n_volumes) * t_r\n",
+    "sampling_rate = 1/16\n",
+    "event_duration = 1\n",
+    "n_regressors = 10\n",
+    "\n",
     "for sub, sub_name in enumerate(meta['dim1']):\n",
     "    for con, con_name in enumerate(meta['dim2']):\n",
     "        \n",
-    "        corr_mats = np.zeros((n_roi, n_roi, 9))\n",
+    "        corr_mats = np.zeros((n_roi, n_roi, n_regressors))\n",
     "\n",
-    "        # Grab task events\n",
+    "        # Extract task events\n",
     "        resp_type = beh[sub, con, :, meta['dim4'].index('response')]\n",
     "        onset_out = beh[sub, con, :, meta['dim4'].index('onset_out')]\n",
     "        onset_dec = beh[sub, con, :, meta['dim4'].index('onset_dec')] \n",
     "        onset_res = beh[sub, con, :, meta['dim4'].index('onset_dec')] + \\\n",
     "                    beh[sub, con, :, meta['dim4'].index('rt')]\n",
-    "\n",
-    "        sampling_rate = 1/16\n",
-    "        event_duration = 1\n",
-    "        frame_times = np.arange(n_volumes) * t_r\n",
     "\n",
     "        for idx_seed in range(n_roi):\n",
     "\n",
@@ -176,25 +223,28 @@
     "                    np.zeros(n_volumes, ), \n",
     "                    index=frame_times, \n",
     "                    columns=['res_miss'])\n",
-    "\n",
+    "                \n",
+    "            # Intercept\n",
+    "            reg_intercept = pd.DataFrame(data=np.ones(n_volumes, ), \n",
+    "                                         columns=['reg_intercept'], index=frame_times)\n",
+    "                \n",
     "            # Create design matrix\n",
     "            regressors = [reg_physio, reg_perr_onset, reg_perr_full, \n",
     "                          reg_ppi_perr_onset, reg_ppi_perr_full,\n",
-    "                          reg_dec_ons, reg_res_lbp, reg_res_rbp, reg_res_miss]\n",
-    "\n",
+    "                          reg_dec_ons, reg_res_lbp, reg_res_rbp, reg_res_miss, reg_intercept]\n",
+    "            \n",
     "            X = pd.concat([r for r in regressors], axis=1, sort=False)\n",
     "\n",
     "            clear_output()\n",
     "            print(f'Analyzing: {sub_name} / {con_name} / seed: {idx_seed}')\n",
     "            \n",
     "            for idx_target in range(n_roi):        \n",
-    "\n",
     "                # Modeled response (target time-series)\n",
     "                y = pd.DataFrame(time_series_clean_all[sub, con, :, idx_target],\n",
     "                                 columns=['target'], index=frame_times)\n",
     "\n",
     "                # Fit GLM\n",
-    "                model = sm.OLS(y, X, hasconst=False)\n",
+    "                model = sm.OLS(y, X, hasconst=True)\n",
     "                results = model.fit()\n",
     "\n",
     "                corr_mats[idx_target, idx_seed] = results.params\n",
