finalized behavioral anaysis, upgrading first level analysis

--- a/activation_analysis/dn_aa_01_first_level.ipynb
+++ b/activation_analysis/dn_aa_01_first_level.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of beh array: (32, 2, 110, 23)\n",
+      "Conditions [(0, 'rew'), (1, 'pun')]\n",
+      "Columns: [(0, 'block'), (1, 'block_bci'), (2, 'side'), (3, 'side_bci'), (4, 'magn_left'), (5, 'magn_right'), (6, 'response'), (7, 'rt'), (8, 'won_bool'), (9, 'won_magn'), (10, 'acc_after_trial'), (11, 'onset_iti'), (12, 'onset_iti_plan'), (13, 'onset_iti_glob'), (14, 'onset_dec'), (15, 'onset_dec_plan'), (16, 'onset_dec_glob'), (17, 'onset_isi'), (18, 'onset_isi_plan'), (19, 'onset_isi_glob'), (20, 'onset_out'), (21, 'onset_out_plan'), (22, 'onset_out_glob')]\n"
+     ]
+    }
+   ],
    "source": [
     "# Directory to save first-level output\n",
     "path_out = os.path.join(path_root, \n",
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +177,7 @@
     "### Single subject analysis\n",
     "\n",
     "Here, first level GLM analysis is performed for each subject and task condition. `FirstLevelModel` instance is created initialized with proper GLM settings (hemodynamic response function, drift and noise model, high pass filter, smoothing kernel). Then, for each imaging sequence following steps are applied:\n",
-    "1. Data files are loaded (T1w anatomical image, EPI sequence, brain mask for EPI sequence, confounds table.\n",
+    "1. Data files are loaded (T1w anatomical image, EPI sequence, brain mask for EPI sequence, confounds table).\n",
     "2. Task events onsets are loaded.\n",
     "3. Different task regressors are created. Some of them are parametrically modulated using subject-specific modulations.\n",
     "4. First level design matrix is created. Design matrix consists of task regressors, drift regressors, confound regressors.\n",
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +221,16 @@
     "\n",
     "#### Task regressors\n",
     "\n",
-    "|   phase  | name               |    variable    |    onset    | duration |    modulation   |\n",
-    "|:--------:|--------------------|:--------------:|:-----------:|:--------:|:---------------:|\n",
-    "| decision | decision onset     |  `reg_dec_ons` | `onset_dec` |     0    |       None      |\n",
-    "| response | left button press  |  `reg_res_lbp` | `onset_res` |     0    |       None      |\n",
-    "|          | right button press |  `reg_res_rbp` | `onset_res` |     0    |       None      |\n",
-    "|          | too late feedback  | `reg_res_miss` | `onset_isi` |     0    |       None      |\n",
-    "|  outcome | outcome onset      |  `reg_out_ons` | `onset_out` |     0    |       None      |\n",
-    "|          | prediction error   | `reg_out_perr` | `onset_out` |     0    | `perr_demeaned` |\n",
+    "|   phase  | name                         |    variable        |    onset    | duration |    modulation   |\n",
+    "|:--------:|------------------------------|:------------------:|:-----------:|:--------:|:---------------:|\n",
+    "| decision | decision onset               |  `reg_dec_ons`     | `onset_dec` |     0    |       None      |\n",
+    "|          | decision process             |  `reg_dec_tillres` | `onset_dec` |     RT   |       None      |\n",
+    "|          | expected correct probability |  `reg_dec_wcor`    | `onset_dec` |     RT   | `wcor_demeaned` |\n",
+    "| response | left button press            |  `reg_res_lbp`     | `onset_res` |     0    |       None      |\n",
+    "|          | right button press           |  `reg_res_rbp`     | `onset_res` |     0    |       None      |\n",
+    "|          | too late feedback            | `reg_res_miss`     | `onset_isi` |     0    |       None      |\n",
+    "| outcome  | outcome onset                |  `reg_out_ons`     | `onset_out` |     0    |       None      |\n",
+    "|          | prediction error             | `reg_out_perr`     | `onset_out` |     0    | `perr_demeaned` |\n",
     "\n",
     "#### Confounds\n",
     "\n",
@@ -231,9 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/anaconda3/envs/decidenet/lib/python3.8/site-packages/nistats/experimental_paradigm.py:64: UserWarning: 'modulation' column found in the given events data.\n",
+      "  warnings.warn(\"'modulation' column found in the given events data.\")\n"
+     ]
+    }
+   ],
    "source": [
     "for sub_idx in range(n_subjects):\n",
     "    for con_idx in range(n_conditions):\n",
@@ -246,6 +267,8 @@
     "        confounds = pd.read_csv(conf_files[con_idx][sub_idx], sep='\\t')\n",
     "        confounds = confounds[confounds_relevant]\n",
     "        confounds.index = frame_times # Standard time representation (in seconds)\n",
+    "        sub_label = meta['dim1'][sub_idx]\n",
+    "        con_label = meta['dim2'][con_idx]\n",
     "\n",
     "        # Setup events\n",
     "        resp_type = beh[sub_idx, con_idx, :, meta['dim4'].index('response')]\n",
@@ -269,10 +292,14 @@
     "\n",
     "        reg_dec_ons = Regressor('dec_ons', frame_times, onset_dec[resp_type != 0])\n",
     "        reg_dec_tillres = Regressor(\n",
-    "            'dec_tillres', frame_times, onset_dec[resp_type != 0],\n",
+    "            'dec_tillres', \n",
+    "            frame_times, \n",
+    "            onset_dec[resp_type != 0],\n",
     "            duration=beh[sub_idx, con_idx, resp_type != 0, meta['dim4'].index('rt')])\n",
     "        reg_dec_wcor = Regressor(\n",
-    "            'dec_wcor', frame_times, onset_dec[resp_type != 0],\n",
+    "            'dec_wcor', \n",
+    "            frame_times, \n",
+    "            onset_dec[resp_type != 0],\n",
     "            duration=beh[sub_idx, con_idx, resp_type != 0, meta['dim4'].index('rt')],\n",
     "            modulation = modulation_wcor_demeaned)\n",
     "\n",
@@ -281,12 +308,14 @@
     "        reg_out_perr = Regressor('out_perr', frame_times, onset_out[resp_type != 0], \n",
     "            modulation = modulation_perr_demeaned)\n",
     "\n",
-    "        regressors = [reg_dec_ons, \n",
-    "                      reg_res_lbp, reg_res_rbp, reg_res_miss, \n",
-    "                      reg_out_ons, reg_out_perr]\n",
-    "\n",
     "        # Create design matrix\n",
+    "        regressors = [reg_dec_ons, reg_res_lbp, reg_res_rbp, reg_res_miss, reg_out_ons, reg_out_perr]\n",
     "        dm, conditions = my_make_first_level_design_matrix(regressors)\n",
+    "\n",
+    "        # Save design matrix plot\n",
+    "        path_dm_plot = os.path.join(path_out, \n",
+    "                                    f'design_matrices/sub-{sub_label}_task-prl{con_label}_dm.svg')\n",
+    "        plot_design_matrix(dm, output_file=path_dm_plot)\n",
     "\n",
     "        # Fit GLM\n",
     "        fmri_glm = fmri_glm.fit(fmri_img, confounds=confounds, design_matrices=dm)\n",
@@ -306,7 +335,7 @@
     "                output_type='z_score'\n",
     "            )\n",
     "\n",
-    "            stat_map_fname = f\"sub-{meta['dim1'][sub_idx]}_task-prl{meta['dim2'][con_idx]}_statmap\"\n",
+    "            stat_map_fname = f\"sub-{sub_label}_task-prl{con_label}_statmap\"\n",
     "            os.makedirs(os.path.join(path_out, contrast.name), exist_ok=True)\n",
     "\n",
     "            nib.save(stat_map, os.path.join(path_out, contrast.name, stat_map_fname))"
